<resources>
    <string name="app_name">FF Protect</string>
    <string name="sign_in_request">Please sign in with your phone number to continue. Authority will be using this number to contact you in case of emergency.</string>
    <string name="sign_in">Sign in</string>
    <string name="permission_request">Please grand the location permission to continue. This app primarily works using Bluetooth low energy technology. For this to work, we need the location permission. We also track your location, but if you don\'t want that, please opt-out from the app settings.
</string>
    <string name="get_started">Get started</string>
    <string name="sign_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_out">Sign out</string>
    <string name="success_sign_out">Successfully signed out</string>
    <string name="failed_to_sign_out">Failed to sign out</string>
    <string name="default_notification_channel_title">General</string>
    <string name="default_notification_channel_description">All general information</string>
    <string name="app_bg_service_notification_channel_title">Background Service Info</string>
    <string name="app_bg_service_notification_channel_description">Information related running background services</string>
    <string name="tracking_service_notification_text">Scanning nearby for your safety</string>
    <string name="turn_on_bluetooth_notification_title">Please turn on bluetooth</string>
    <string name="turn_on_bluetooth_notification_description">%1$s requires bluetooth to be turn on to ensure your safety</string>
    <string name="app_blocked_message">Service of this app is temporarily unavailable</string>
    <string name="bluetooth_not_enabled_error_title">Bluetooth not enabled!</string>
    <string name="bluetooth_not_enabled_error_description">This app requires Bluetooth to be turned on for its operation. Please turn it on and assure the safety of you and the people around you.</string>
    <string name="bluetooth_not_available">Bluetooth not available in this device. So unable to start.</string>
    <string name="tracker_off_title">Tracker is off!</string>
    <string name="tracker_off_description">@string/pref_tracking_summary_off</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Preference Titles -->
    <string name="pref_tracker">Tracker</string>
    <string name="pref_notifications">Notifications</string>

    <!-- Tracker Preferences -->
    <string name="pref_tracking_title">Track people around you</string>
    <string name="pref_tracking_summary_on">We are tracking people around you with this app installed on their phones. We respect your privacy. Your data is safe and secure with us and it won\'t be misused.</string>
    <string name="pref_tracking_summary_off">Tracker is off. Which means there is no use of having this app on your phone. This option is provided only to respect your privacy when it is really required. Please turn it on and assure the safety of you and the people around you.</string>

    <string name="pref_track_location_title">Track my location</string>
    <string name="pref_track_location_summary">Allowing to collect the location information will help us optimally assure more safety. You can opt-out from tracking location if really necessary.</string>


    <!-- Notifications Preferences -->
    <string name="pref_bluetooth_notification_title">Bluetooth required</string>
    <string name="pref_bluetooth_notification_summary_on">This app requires Bluetooth to be turned on for its operation. We\'ll notify you when Bluetooth is off.</string>
    <string name="pref_bluetooth_notification_summary_off">This app requires Bluetooth to be turned on for its operation. We\'ll notify you when Bluetooth is off.</string>
    <string name="enable">Enable</string>
    <string name="know_more">Know more</string>
    <string name="how_it_works_title">How it works?</string>
    <string name="how_it_works_message">This app works by scanning your surroundings with a short interval to identify the people around you. And this information will be used to assure the safety and control the disease spreading.</string>
    <string name="share_string">Hi, Please use %1$s to assure the safety of you and the people around you. Download Now: %2$s</string>
    <string name="built_by">Built by</string>
    <string name="farefirst">FareFirst</string>
    <string name="goto_farefirst">Goto FareFirst</string>
    <string name="tracker_status">Tracker status</string>
    <string name="last_synced_at">Last synced at</string>
    <string name="message_from_us">Message from us</string>
    <string name="dashboard">Dashboard</string>
    <string name="tracker_running">Running</string>
    <string name="tracker_not_running">Not running</string>
    <string name="never_synced">Never synced</string>
    <string name="phone_number">Phone number</string>
    <string name="unknown">Unknown</string>
    <string name="ui_data_load_error_message">Error while loading data. Please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="version">Version: %1$s</string>
    <string name="app_description">@string/pref_tracking_summary_on</string>
    <string name="item_open_icon">Item open icon</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="faq">FAQ</string>
    <string name="project_source">Project source code</string>
    <string name="error_opening_play_store">Error opening play store</string>
</resources>
