<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/phone_number"
            android:textAppearance="?attr/textAppearanceOverline" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceBody2"
            tool:text="+919995533999" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/tracker_status"
            android:textAppearance="?attr/textAppearanceOverline" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:drawablePadding="@dimen/dp_8"
            android:gravity="center_vertical"
            android:textAppearance="?attr/textAppearanceBody2"
            tool:text="Running" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/last_synced_at"
            android:textAppearance="?attr/textAppearanceOverline" />

        <TextView
            android:id="@+id/tvLastSyncedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:textAppearance="?attr/textAppearanceBody2"
            tool:text="25 Jun 2020, 10: 34 AM" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/message_from_us"
            android:textAppearance="?attr/textAppearanceOverline" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/colorPrimaryA14"
            android:minHeight="100dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?attr/textAppearanceBody2" />

            <ProgressBar
                android:id="@+id/pbLoading"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <LinearLayout
                android:id="@+id/llError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ui_data_load_error_message"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?colorError" />

                <Button
                    android:id="@+id/btnRetry"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retry"
                    android:textColor="?colorAccent"
                    app:rippleColor="@color/colorAccentRipple" />
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>