<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvBuiltBy"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    app:strokeColor="@color/colorPrimarySurfaceBoarder"
    app:strokeWidth="1dp"
    tools:showIn="@layout/activity_home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16">

        <TextView
            android:id="@+id/tvBuiltBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_8"
            android:text="@string/built_by"
            android:textAppearance="?attr/textAppearanceCaption" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvBuiltBy"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/farefirst"
            app:srcCompat="@drawable/ic_farefirst_writing_blue" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/goto_farefirst"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>