<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?colorOnError"
    app:strokeColor="?colorError"
    app:strokeWidth="1dp"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <TextView
                android:id="@+id/tvBluetoothDisabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_8"
                android:text="@string/bluetooth_not_enabled_error_title"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="?colorError" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/bluetooth_not_enabled_error_description"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?colorError" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8">

            <Button
                android:id="@+id/btnEnable"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>