<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardForegroundColor="@color/colorAccentSurface"
    app:strokeColor="@color/colorAccentSurfaceBoarder"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dp_8"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                tool:text="@string/how_it_works_title" />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:textAppearance="?attr/textAppearanceBody2"
                tool:text="@string/how_it_works_message" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8">

            <Button
                android:id="@+id/btnKnowMore"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/know_more"
                android:textColor="?colorAccent"
                app:rippleColor="@color/colorAccentRipple" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>